Update all configurations with actual Render URL: https://fixpoint-ajtz.onrender.com

--- a/render-test.html
+++ b/render-test.html
@@ -62,7 +62,7 @@
     </div>
 
     <script>
-        const RENDER_BASE = 'https://your-service-name.onrender.com'; // Update this with your actual Render URL
+        const RENDER_BASE = 'https://fixpoint-ajtz.onrender.com'; // Update this with your actual Render URL
 
         function log(message, type = 'info') {
             const element = document.getElementById('testResults');
